# substrate-node-template

./: .gitignore  Cargo.toml
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
